# cs1230-final-project

./: .gitignore  .ninja_deps  .ninja_log  CMakeCache.txt.prev  CMakeLists.txt  README.md  build.ninja  cmake_install.cmake  cs1230_final_lights_camera_explosion  flake.nix
.cmake/api/v1/reply/: cache-v2-e8d93a87feb1645f54e8.json  cmakeFiles-v1-518c36fa43718b6857a1.json  codemodel-v2-baab65b579b3bfa514a8.json  index-2024-12-04T23-14-31-0375.json  target-StaticGLEW-Debug-7f61ea147fbe6e4659aa.json  target-cs1230_final_lights_camera_explosion-Debug-d1b49156f9e126fb2671.json  toolchains-v1-2cd378f3ba8438b25ee3.json
glm/: cmake_install.cmake
resources/shaders/: building.vert  crosshair.frag  default.frag  default.vert  filter.frag  filter.vert
scenefiles/final/: procedural_city.json  reflections_basic_modified.json  shadow_test_modified.json
src/: aabb.cpp  aabb.h  camera.cpp  camera.h  main.cpp  mainwindow.cpp  mainwindow.h  realtime.cpp  realtime.h  realtimescene.cpp  realtimescene.h  settings.h
src/material_constants/: enemy_materials.cpp  enemy_materials.h
src/meshes/: conemesh.cpp  conemesh.h  cubemesh.cpp  cubemesh.h  cylindermesh.cpp  cylindermesh.h  primitivemesh.cpp  primitivemesh.h  skycubemesh.cpp  skycubemesh.h  skymesh.cpp  skymesh.h  spheremesh.cpp  spheremesh.h
src/objects/: collisionobject.cpp  collisionobject.h  conemesh.h  cubemesh.h  cylindermesh.cpp  enemyobject.cpp  enemyobject.h  ncprojectileobject.cpp  ncprojectileobject.h  playerobject.cpp  playerobject.h  primitivemesh.cpp  primitivemesh.h  projectileobject.cpp  projectileobject.h  realtimeobject.cpp  realtimeobject.h  skyboxobject.cpp  skyboxobject.h  staticobject.cpp  staticobject.h
src/utils/: helpers.cpp  helpers.h  imagereader.cpp  imagereader.h  rgba.h  scenedata.h  scenefilereader.cpp  scenefilereader.h  sceneparser.cpp  sceneparser.h  shaderloader.h
